--- a/about_en.html
+++ b/about_en.html
@@ -10,7 +10,7 @@
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#222222">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#222222">    
+	<meta name="apple-mobile-web-app-status-bar-style" content="#222222">
 	<meta name="description" content="A&O konsult, arbets- och organisationskonsult i Lund. George Smidelik och Monica Smidelik är sedan 1982 verksamma inom organisationsutveckling, vuxenpedagogik, projektledning, personal- och ledarutveckling. Våra kunder är framför allt medelstora och stora svenska och multinationella företag">
     <meta name="keywords" content="arbetsledning, arbetsorganisation, arbetspsykologi, chefs- och ledarutveckling, företagskultur, förändringsarbete, grupputveckling, handledning, intern marknadsföring, klimatanalys, kommunikation, konflikthantering, konsultmetodik, kreativitet, kvalitetsutveckling, ledarskap, management, medarbetarsamtal, mentorskap, metodutveckling, motivation, målstyrning, mötesteknik, organisationsanalys, organisationskonsult, organisationsutveckling, pedagogik, personalutbildning, personalutveckling, personlig utveckling, projekt, projektledning, psykologi, stress, teamutveckling, utbildning, utbildningskonsult, utbildningsmaterial, utvecklingssamtal, verksamhetsutveckling, vuxenpedagogik">
     <link rel="icon" href="img/favicon.ico">
@@ -48,16 +48,16 @@
 			  <span class="icon-bar"></span>
 			  <span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="index.html"><img src="img/aologo.png" alt="A&O Konsult">
+			<a class="navbar-brand" href="index_en.html"><img src="img/aologo.png" alt="A&O Konsult">
 			</a>
 		  </div>
 		  <div id="navbar3" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-center">
-			  <li><a href="index.html">Hem</a></li>
-			  <li><a href="services.html">Våra tjänster</a></li>
-			  <li><a href="about.html">Om oss</a></li>
-			  <li class="active"><a href="contact.html">Kontakt</a></li>
-			  <li><a href="contact_en.html">In English<img src="img/en_UK.png"></a></li>
+			  <li><a href="index_en.html">Home</a></li>
+			  <li><a href="services_en.html">Our services</a></li>
+			  <li class="active"><a href="about_en.html">About us</a></li>
+			  <li><a href="contact_en.html">Contact</a></li>
+			  <li><a href="about.html">På svenska<img src="img/sv_SWE.png"></a></li>
 			</ul>
 		  </div>
 		  <!--/.nav-collapse -->
@@ -65,32 +65,30 @@
 		<!--/.container-fluid -->
 	  </nav>
 	</div>
-	<div class="container marketing">
-		<div class="row">
-			<div class="col-lg-4">
-				  <h2><strong>A&O konsult</strong></h2>
-				  <p><strong>Tel: </strong>046 - 211 15 76</p>
-				  <p><strong>Adress: </strong>Box 2168, 220 02 LUND, Sweden</p>
-				  <br />
-			</div>
-		</div>
-        <div class="row">
-			<div class="col-lg-4">
-				  <img class="img-rounded" src="img/work/george-s.jpg" alt="George Smidelik">
-				  <h2><strong>George Smidelik</strong></h2>
-				  <p><strong>E-post: </strong><a href="mailto:george@a-o.se">george@a-o.se</a></p>
-				  <p><strong>Mobil: </strong>070-585 88 77</p>
-				  <br />
-			</div>
-			<div class="col-lg-4">
-				  <img class="img-rounded" src="img/work/monica-s.jpg" alt="Monica Smidelik">
-				  <h2><strong>Monica Smidelik</strong></h2>
-				  <p><strong>E-post: </strong><a href="mailto:monica@a-o.se">monica@a-o.se</a></p>
-				  <p><strong>Mobil: </strong>070-974 35 71</p>
-				  <br />
-			</div>
-		</div>
-    </div>
+	<div class="container">
+        <h3><strong>A&O konsults unika kompetens är att:</strong></h3>
+		<ul class="list-style-type:disc">
+			<li>se relevanta och återkommande mönster hos individer, grupper och organisationer</li>
+			<li>experimentera med och tydliggöra olika teamsammansättningars möjligheter och begränsningar</li>
+			<li>föra ut budskap på ett tydligt, begripligt och engagerande sätt</li>
+			<li>skapa trygghet och få människor att växa</li>
+			<li>leda projekt och gå från ord till handling</li>
+			<li>balansera lust och seriöst, målinriktat arbete</li>
+		</ul>
+		<br />
+		<p><strong>Jakten på det lustfyllda lärandet</strong> har varit en drivfjäder och en röd tråd genom min yrkesbana. Få saker är så stimulerande, som att se människor upptäcka att de har utvecklat nya färdigheter, hittat nya tankemönster, eller stärkt tron på sig själva och sin egen förmåga. Framgångsrik pedagogik handlar om att skapa en ”känsla av sammanhang” kring utbildningens nyckelområden. Det gör man genom att:
+    	<ul class="list-style-type:disc">
+			<li>belysa vad kunskapen kan användas till (större meningsfullhet)</li>
+			<li>visa vägen till relevanta fakta, förklaringsmodeller och samband (bättre begriplighet)</li>
+			<li>identifiera fungerande beteendemönster, metoder och förhållningssätt (ökad hanterbarhet)</li>
+		</ul>
+		<br />
+		<p><strong>Pricken över ”i”-et</strong> är överraskningsmomenten, den skräckblandade förtjusningen och självinsikten, som uppnås genom upplevelsebaserade exempel och praktiska tillämpningsövningar.</p>
+		<br />
+		<p><strong>Kontoret ligger i hjärtat av Lund</strong>. Arkitekten Helgo Zettervalls villa på Sandgatan 14 utgör basen för vår verksamhet. Zettervallska villan stod klar 1871 och var under tio års tid den legandariske arkitektens bostad. Byggnaden är även känd i Lund som "Lufthopperiet" där Major Thulin och hans sjukgymnaster bodde. Majoren var sträng och såg till att grindarna låstes innan mörkrets inbrott. "Lufthoppen" syftar på de akrobatiska övningar, som sjukgymnasteleverna ägnade sig åt för att svinga sig över det höga staketet till grannen, Johan Henrik Thomanders studenthem för gossar....</p>
+		<br />
+		<p><strong>De luftiga och spatiösa lokalerna</strong> har inretts som ett modernt, dynamiskt nätverkskontor. Denna tidlösa, rofyllda, kreativa oas delas med:<br /><br />Stefan Jern, ARCANA, leg.psykolog, assoc. professor och konsult.<br /><br /> Anders Hallborg, IHPU, leg.psykolog, administrerar fortbildning för psykologer.<br /><br /> Birramex.
+	</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
