--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			  <li><a href="services.html">Våra tjänster</a></li>
 			  <li><a href="about.html">Om oss</a></li>
 			  <li><a href="contact.html">Kontakt</a></li>
+			  <li><a href="index_en.html">In English<img src="img/en_UK.png"></a></li>
 			</ul>
 		  </div>
 		  <!--/.nav-collapse -->
@@ -65,32 +66,59 @@
 	  </nav>
 	</div>
 	<div class="container">
-        <h2><strong>Välkommen till A&O konsult i Lund</strong></h2>
+        <h2><strong>Välkommen till A&O konsult</strong></h2>
         <p class="medium">A&O konsult etablerades 1982. Verksamhetens inriktning har växlat från personalutbildning och organisationsuppdrag inom den offentliga sektorn till ledarskap, kommunikation och strategisk utveckling i mindre, snabbväxande företag i olika branscher till ledarutveckling, projektledarskap och personalutveckling i stora, kända multinationella företagsjättar.</p>
 		<div class="jumbotron">
 		  <div class="container">
 			<h4 align="center"><strong>Några av våra kunder och sammarbetspartners:</strong></h4>
 				<div class="row">
-					<a href="https://www.astrazeneca.com"><img class="center-block img-responsive" src="img/clients/astrazeneca.png" alt="AstraZeneca">
+					<div class="col-md-12">
+						<a href="https://www.astrazeneca.com"><img class="img-responsive center-block" src="img/clients/astrazeneca.png" alt="AstraZeneca"></a>
+					</div>
 				</div>
-				<p />
+				<br />
 				<div class="row">
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.eon.se"><img class="center-block img-responsive" src="img/clients/eon.png" alt="E-ON"></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.g4s.com"><img class="center-block img-responsive" src="img/clients/g4s.png" alt="G4S"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://garuda.se"><img class="center-block img-responsive" src="img/clients/garuda.png" alt="Garuda AB"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.henley.ac.uk"><img class="center-block img-responsive" src="img/clients/henley.png" alt="Henley"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="https://www.ihm.se"><img class="center-block img-responsive" src="img/clients/ihm.png" alt="IHM"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.ikea.com/se/sv/"><img class="center-block img-responsive" src="img/clients/ikea.png" alt="IKEA"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.lu.se/"><img class="center-block img-responsive" src="img/clients/lu.png" alt="Lunds universitet"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.qmatic.com/sv-se/"><img class="center-block img-responsive" src="img/clients/qmatic.png" alt="QMATIC"><p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.samsung.com/se"><img class="center-block img-responsive" src="img/clients/samsung.png" alt="Samsung"> <p /></div>
-				  <div class="col-xs-6 col-sm-4"><a href="http://www.volvocars.com/se"><img class="center-block img-responsive" src="img/clients/volvo.png" alt="Volvo"></div>
+					<div class="col-xs-4">
+						<a href="https://www.eon.se"><img class="img-responsive center-block" src="img/clients/eon.png" alt="E-ON"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://www.g4s.com"><img class="img-responsive center-block" src="img/clients/g4s.png" alt="G4S"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://garuda.se"><img class="img-responsive center-block" src="img/clients/garuda.png" alt="Garuda AB"></a>
+					</div>  
 				</div>
-				<p />
+				<br />
 				<div class="row">
-					<a href="http://www.sonyericsson.se"><img class="center-block img-responsive" src="img/clients/sonyericsson.png" alt="Sony Ericsson">
+					<div class="col-xs-4">
+						<a href="https://www.henley.ac.uk"><img class="center-block img-responsive" src="img/clients/henley.png" alt="Henley"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="https://www.ihm.se"><img class="center-block img-responsive" src="img/clients/ihm.png" alt="IHM"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://www.inter.ikea.com/"><img class="center-block img-responsive" src="img/clients/ikea2.png" alt="Inter IKEA AB"></a>
+					</div>  
 				</div>
-		  </div>
+				<br />
+				<div class="row">
+					<div class="col-xs-4">
+						<a href="http://www.lu.se/"><img class="center-block img-responsive" src="img/clients/lu.png" alt="Lunds universitet"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://www.qmatic.com/sv-se/"><img class="center-block img-responsive" src="img/clients/qmatic.png" alt="QMATIC"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://www.samsung.com/se"><img class="center-block img-responsive" src="img/clients/samsung.png" alt="Samsung"></a>
+					</div>  
+				</div>
+				<br />				
+				<div class="row">
+					<div class="col-md-12">
+						<a href="http://www.volvocars.com/se"><img class="center-block img-responsive" src="img/clients/volvo.png" alt="Volvo"></a>
+					</div>
+				</div>
+			</div>
 		</div>
     </div>
 
