--- a/services_en.html
+++ b/services_en.html
@@ -48,16 +48,16 @@
 			  <span class="icon-bar"></span>
 			  <span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="index.html"><img src="img/aologo.png" alt="A&O Konsult">
+			<a class="navbar-brand" href="index_en.html"><img src="img/aologo.png" alt="A&O Konsult">
 			</a>
 		  </div>
 		  <div id="navbar3" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-center">
-			  <li><a href="index.html">Hem</a></li>
-			  <li><a href="services.html">Våra tjänster</a></li>
-			  <li><a href="about.html">Om oss</a></li>
-			  <li class="active"><a href="contact.html">Kontakt</a></li>
-			  <li><a href="contact_en.html">In English<img src="img/en_UK.png"></a></li>
+			  <li><a href="index_en.html">Home</a></li>
+			  <li class="active"><a href="services_en.html">Our services</a></li>
+			  <li><a href="about_en.html">About us</a></li>
+			  <li><a href="contact_en.html">Contact</a></li>
+			  <li><a href="services.html">På svenska<img src="img/sv_SWE.png"></a></li>
 			</ul>
 		  </div>
 		  <!--/.nav-collapse -->
@@ -65,32 +65,65 @@
 		<!--/.container-fluid -->
 	  </nav>
 	</div>
-	<div class="container marketing">
-		<div class="row">
-			<div class="col-lg-4">
-				  <h2><strong>A&O konsult</strong></h2>
-				  <p><strong>Tel: </strong>046 - 211 15 76</p>
-				  <p><strong>Adress: </strong>Box 2168, 220 02 LUND, Sweden</p>
-				  <br />
+	<div class="container">
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3><strong>Staff development</strong></h3>
+				<p>The contracts mostly concern developing cooperativiness, group dynamics, clarifying roles, finding better work methods, common base values, or finding the balance between effectiviness and long-lasting well-being.</p>
+			</div>
+			<div class="col-sm-2">
+				<img class="img-rounded" src="img/work/1.jpg" alt="Personalutveckling">
 			</div>
 		</div>
-        <div class="row">
-			<div class="col-lg-4">
-				  <img class="img-rounded" src="img/work/george-s.jpg" alt="George Smidelik">
-				  <h2><strong>George Smidelik</strong></h2>
-				  <p><strong>E-post: </strong><a href="mailto:george@a-o.se">george@a-o.se</a></p>
-				  <p><strong>Mobil: </strong>070-585 88 77</p>
-				  <br />
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3><strong>Project management</strong></h3>
+				<p>A&O consulting trains and coaches project managers on IHM Business School's behalf. Project support and developing project models is also part of our repertoire. We are constantly involved in various development and collaborative projects.</p>
 			</div>
-			<div class="col-lg-4">
-				  <img class="img-rounded" src="img/work/monica-s.jpg" alt="Monica Smidelik">
-				  <h2><strong>Monica Smidelik</strong></h2>
-				  <p><strong>E-post: </strong><a href="mailto:monica@a-o.se">monica@a-o.se</a></p>
-				  <p><strong>Mobil: </strong>070-974 35 71</p>
-				  <br />
+			<div class="col-sm-2">
+				<img class="img-rounded" src="img/work/2.jpg" alt="Personalutveckling">
 			</div>
 		</div>
-    </div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3><strong>Networking</strong></h3>
+				<p>Initiation and revitalisation of professional networks is part of our work.</p>
+			</div>
+			<div class="col-sm-2">
+				<img class="img-rounded" src="img/work/3.jpg" alt="Personalutveckling">
+			</div>
+		</div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3><strong>Management training</strong></h3>
+				<p>Leadership, change management, performance meetings, situational leadership, organisational psychology, motivational work, decision processes and goal orientation are some the of the areas that are of great use for both experienced managers and ambitious management candidates.</p>
+			</div>
+			<div class="col-sm-2">
+			<br />
+				<img class="img-rounded" src="img/work/4.jpg" alt="Personalutveckling">
+			</div>
+		</div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3><strong>Andragogy (adult learning)</strong></h3>
+				<p>Development of interactive, experience-based methods of learning is one of our key competences. An abundance of academic research and practical experience constitutes the foundation for effective and pleasurable learning. We train professional educators and consultants and we do as we teach.</p>
+			</div>
+			<div class="col-sm-2">
+			<br />
+				<img class="img-rounded" src="img/work/5.jpg" alt="Personalutveckling">
+			</div>
+		</div>
+		<div class="row row-eq-height">
+			<div class="col-6 col-xs-10">
+				<h3><strong>Teambuilding</strong></h3>
+				<p>The knowledge of the team's composition, work methods, life cycle, dynamics and potential pitfalls is extremely valuable within modern organisations. To provide your latest project with a good kick-off, to help the team in preventing unnecessary conflicts and to identify the team's different roles is just the job for A&O consulting.</p>
+			</div>
+			<div class="col-sm-2 float-bottom">
+			<br />
+				<img class="img-rounded" src="img/work/6.jpg" alt="Personalutveckling"><p />
+			</div>
+		</div>
+	</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
