--- a/contact_en.html
+++ b/contact_en.html
@@ -48,16 +48,16 @@
 			  <span class="icon-bar"></span>
 			  <span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="index.html"><img src="img/aologo.png" alt="A&O Konsult">
+			<a class="navbar-brand" href="index_en.html"><img src="img/aologo.png" alt="A&O Konsult">
 			</a>
 		  </div>
 		  <div id="navbar3" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-center">
-			  <li><a href="index.html">Hem</a></li>
-			  <li><a href="services.html">Våra tjänster</a></li>
-			  <li><a href="about.html">Om oss</a></li>
-			  <li class="active"><a href="contact.html">Kontakt</a></li>
-			  <li><a href="contact_en.html">In English<img src="img/en_UK.png"></a></li>
+			  <li><a href="index_en.html">Home</a></li>
+			  <li><a href="services_en.html">Our services</a></li>
+			  <li><a href="about_en.html">About us</a></li>
+			  <li class="active"><a href="contact_en.html">Contact</a></li>
+			  <li><a href="contact.html">På svenska<img src="img/sv_SWE.png"></a></li>
 			</ul>
 		  </div>
 		  <!--/.nav-collapse -->
@@ -68,9 +68,9 @@
 	<div class="container marketing">
 		<div class="row">
 			<div class="col-lg-4">
-				  <h2><strong>A&O konsult</strong></h2>
-				  <p><strong>Tel: </strong>046 - 211 15 76</p>
-				  <p><strong>Adress: </strong>Box 2168, 220 02 LUND, Sweden</p>
+				  <h2><strong>A&O consulting</strong></h2>
+				  <p><strong>Phone: </strong>+46(0)46 - 211 15 76</p>
+				  <p><strong>Address: </strong>Box 2168, 220 02 LUND, Sweden</p>
 				  <br />
 			</div>
 		</div>
@@ -78,15 +78,15 @@
 			<div class="col-lg-4">
 				  <img class="img-rounded" src="img/work/george-s.jpg" alt="George Smidelik">
 				  <h2><strong>George Smidelik</strong></h2>
-				  <p><strong>E-post: </strong><a href="mailto:george@a-o.se">george@a-o.se</a></p>
-				  <p><strong>Mobil: </strong>070-585 88 77</p>
+				  <p><strong>Email: </strong><a href="mailto:george@a-o.se">george@a-o.se</a></p>
+				  <p><strong>Mobile: </strong>070-585 88 77</p>
 				  <br />
 			</div>
 			<div class="col-lg-4">
 				  <img class="img-rounded" src="img/work/monica-s.jpg" alt="Monica Smidelik">
 				  <h2><strong>Monica Smidelik</strong></h2>
-				  <p><strong>E-post: </strong><a href="mailto:monica@a-o.se">monica@a-o.se</a></p>
-				  <p><strong>Mobil: </strong>070-974 35 71</p>
+				  <p><strong>Email: </strong><a href="mailto:monica@a-o.se">monica@a-o.se</a></p>
+				  <p><strong>Mobile: </strong>070-974 35 71</p>
 				  <br />
 			</div>
 		</div>
