--- a/index_en.html
+++ b/index_en.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#222222">
+	<meta name="theme-color" content="#222222">
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#222222">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#222222">    
+	<meta name="apple-mobile-web-app-status-bar-style" content="#222222">
 	<meta name="description" content="A&O konsult, arbets- och organisationskonsult i Lund. George Smidelik och Monica Smidelik är sedan 1982 verksamma inom organisationsutveckling, vuxenpedagogik, projektledning, personal- och ledarutveckling. Våra kunder är framför allt medelstora och stora svenska och multinationella företag">
     <meta name="keywords" content="arbetsledning, arbetsorganisation, arbetspsykologi, chefs- och ledarutveckling, företagskultur, förändringsarbete, grupputveckling, handledning, intern marknadsföring, klimatanalys, kommunikation, konflikthantering, konsultmetodik, kreativitet, kvalitetsutveckling, ledarskap, management, medarbetarsamtal, mentorskap, metodutveckling, motivation, målstyrning, mötesteknik, organisationsanalys, organisationskonsult, organisationsutveckling, pedagogik, personalutbildning, personalutveckling, personlig utveckling, projekt, projektledning, psykologi, stress, teamutveckling, utbildning, utbildningskonsult, utbildningsmaterial, utvecklingssamtal, verksamhetsutveckling, vuxenpedagogik">
     <link rel="icon" href="img/favicon.ico">
@@ -48,16 +48,16 @@
 			  <span class="icon-bar"></span>
 			  <span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="index.html"><img src="img/aologo.png" alt="A&O Konsult">
+			<a class="navbar-brand" href="index_en.html"><img src="img/aologo.png" alt="A&O Konsult">
 			</a>
 		  </div>
 		  <div id="navbar3" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-center">
-			  <li><a href="index.html">Hem</a></li>
-			  <li><a href="services.html">Våra tjänster</a></li>
-			  <li><a href="about.html">Om oss</a></li>
-			  <li class="active"><a href="contact.html">Kontakt</a></li>
-			  <li><a href="contact_en.html">In English<img src="img/en_UK.png"></a></li>
+			  <li class="active"><a href="index_en.html">Home</a></li>
+			  <li><a href="services_en.html">Our services</a></li>
+			  <li><a href="about_en.html">About us</a></li>
+			  <li><a href="contact_en.html">Contact</a></li>
+			  <li><a href="index.html">På svenska<img src="img/sv_SWE.png"></a></li>
 			</ul>
 		  </div>
 		  <!--/.nav-collapse -->
@@ -65,29 +65,59 @@
 		<!--/.container-fluid -->
 	  </nav>
 	</div>
-	<div class="container marketing">
-		<div class="row">
-			<div class="col-lg-4">
-				  <h2><strong>A&O konsult</strong></h2>
-				  <p><strong>Tel: </strong>046 - 211 15 76</p>
-				  <p><strong>Adress: </strong>Box 2168, 220 02 LUND, Sweden</p>
-				  <br />
-			</div>
-		</div>
-        <div class="row">
-			<div class="col-lg-4">
-				  <img class="img-rounded" src="img/work/george-s.jpg" alt="George Smidelik">
-				  <h2><strong>George Smidelik</strong></h2>
-				  <p><strong>E-post: </strong><a href="mailto:george@a-o.se">george@a-o.se</a></p>
-				  <p><strong>Mobil: </strong>070-585 88 77</p>
-				  <br />
-			</div>
-			<div class="col-lg-4">
-				  <img class="img-rounded" src="img/work/monica-s.jpg" alt="Monica Smidelik">
-				  <h2><strong>Monica Smidelik</strong></h2>
-				  <p><strong>E-post: </strong><a href="mailto:monica@a-o.se">monica@a-o.se</a></p>
-				  <p><strong>Mobil: </strong>070-974 35 71</p>
-				  <br />
+	<div class="container">
+        <h2><strong>Welcome to A&O consulting</strong></h2>
+        <p class="medium">A&O consulting was established in 1982. Our focal point has shifted from staff training and organisational development within the public sector towards leadership, communication and strategic development within smaller, rapidly expanding businesses within various branches of industry. In addition, A&O consulting provides leadership development, project management and staff development within large, well-established multinational giants.</p>
+		<div class="jumbotron">
+			<div class="container">
+				<h4 align="center"><strong>Some of our clients and partners:</strong></h4>
+				<div class="row">
+					<div class="col-md-12">
+						<a href="https://www.astrazeneca.com"><img class="img-responsive center-block" src="img/clients/astrazeneca.png" alt="AstraZeneca"></a>
+					</div>
+				</div>
+				<br />
+				<div class="row">
+					<div class="col-xs-4">
+						<a href="https://www.eon.se"><img class="img-responsive center-block" src="img/clients/eon.png" alt="E-ON"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://www.g4s.com"><img class="img-responsive center-block" src="img/clients/g4s.png" alt="G4S"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://garuda.se"><img class="img-responsive center-block" src="img/clients/garuda.png" alt="Garuda AB"></a>
+					</div>  
+				</div>
+				<br />
+				<div class="row">
+					<div class="col-xs-4">
+						<a href="https://www.henley.ac.uk"><img class="center-block img-responsive" src="img/clients/henley.png" alt="Henley"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="https://www.ihm.se"><img class="center-block img-responsive" src="img/clients/ihm.png" alt="IHM"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://www.inter.ikea.com/"><img class="center-block img-responsive" src="img/clients/ikea2.png" alt="Inter IKEA AB"></a>
+					</div>  
+				</div>
+				<br />
+				<div class="row">
+					<div class="col-xs-4">
+						<a href="http://www.lu.se/"><img class="center-block img-responsive" src="img/clients/lu.png" alt="Lunds universitet"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://www.qmatic.com/sv-se/"><img class="center-block img-responsive" src="img/clients/qmatic.png" alt="QMATIC"></a>
+					</div>  
+					<div class="col-xs-4">
+						<a href="http://www.samsung.com/se"><img class="center-block img-responsive" src="img/clients/samsung.png" alt="Samsung"></a>
+					</div>  
+				</div>
+				<br />				
+				<div class="row">
+					<div class="col-md-12">
+						<a href="http://www.volvocars.com/se"><img class="center-block img-responsive" src="img/clients/volvo.png" alt="Volvo"></a>
+					</div>
+				</div>
 			</div>
 		</div>
     </div>
