--- a/services.html
+++ b/services.html
@@ -57,6 +57,7 @@
 			  <li class="active"><a href="services.html">Våra tjänster</a></li>
 			  <li><a href="about.html">Om oss</a></li>
 			  <li><a href="contact.html">Kontakt</a></li>
+			  <li><a href="services_en.html">In English<img src="img/en_UK.png"></a></li>
 			</ul>
 		  </div>
 		  <!--/.nav-collapse -->
